--- a/item.html
+++ b/item.html
@@ -133,6 +133,11 @@
 <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
 <script type="module" src="/dist/js/item-ui.min.js" defer></script>
 <script type="module" src="/dist/js/items-core.min.js?v=BeQZgs37" defer></script>
+<script type="module">
+  import('/dist/js/services-Bc-4z6yK.js').catch(() =>
+    import('/dist/js/services/recipeService.min.js')
+  );
+</script>
 <script type="module" src="/dist/js/item-loader.min.js" defer></script>
   
   <!-- Inicialización -->
