build: generate hashed assets

--- a/dones.html
+++ b/dones.html
@@ -113,11 +113,11 @@
     </main>
   </div>
 
-  <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-legendary.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.D43UCTB3.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -130,8 +130,8 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/dist/js/feedback-modal.min.js');
-        await import('/dist/js/sw-register.min.js');
+        await import('/dist/js/feedback-modal.BaGBwUid.min.js');
+        await import('/dist/js/sw-register.Wot8iBZe.min.js');
       } catch (e) {
         console.error('Error loading optional modules', e);
       }
