--- a/legendarios.html
+++ b/legendarios.html
@@ -324,7 +324,7 @@ function scrollToLegendario(id) {
 
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -334,7 +334,7 @@ function scrollToLegendario(id) {
     });
   </script>
   
-  <script type="module" src="/dist/js/feedback-modal.min.js"></script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js"></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
