--- a/auth.html
+++ b/auth.html
@@ -58,6 +58,6 @@
             }
         };
     </script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
