--- a/builds.html
+++ b/builds.html
@@ -75,7 +75,7 @@
       </section>
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -85,7 +85,7 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/feedback-modal.min.js"></script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js"></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
