--- a/compare-craft.html
+++ b/compare-craft.html
@@ -72,7 +72,7 @@
 
 
   
-  <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
 
   <!-- Modal del Buscador fuera de .container para igualar a index.html -->
   <div id="search-modal" class="search-modal hidden">
@@ -99,7 +99,7 @@
     const closeBtn = document.getElementById('close-search-modal');
     openBtn.addEventListener('click', function(e) {
       e.preventDefault();
-      openSearchModal('/dist/js/search-modal-compare-craft.min.js');
+      openSearchModal('/dist/js/search-modal-compare-craft.Ds_WAp9-.min.js');
     });
     closeBtn.addEventListener('click', closeSearchModal);
     modal.querySelector('.search-modal-backdrop').addEventListener('click', closeSearchModal);
@@ -109,10 +109,10 @@
   });
   </script>
 
-  <script type="module" src="/dist/js/tabs.min.js" defer></script>
-  <script type="module" src="/dist/js/feedback-modal.min.js" defer></script>
+  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
   <!-- Nuevos módulos separados -->
-  <script type="module" src="/dist/js/items-core.min.js?v=BeQZgs37" defer></script>
+  <script type="module" src="/dist/js/items-core.DDg-XKPB.min.js?v=BeQZgs37" defer></script>
   <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
   <script type="module" src="/dist/js/compare-ui.min.js" defer></script>
 
@@ -143,7 +143,7 @@
 };
 
   </script>
-<script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
+<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
@@ -164,6 +164,6 @@
     }
   });
 </script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
