--- a/forja-mistica.html
+++ b/forja-mistica.html
@@ -219,10 +219,10 @@
       <!-- FIN extras -->
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
-  <script type="module" src="/dist/js/tabs.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-forja-mistica.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-forja-mistica.B_m8Dj-2.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -232,7 +232,7 @@
     });
   </script>
 
-  <script type="module" src="/dist/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
