--- a/fractales-gold.html
+++ b/fractales-gold.html
@@ -171,9 +171,9 @@
 <!-- fin EXTRAS -->
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
-  <script type="module" src="/dist/js/tabs.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-fractales.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-fractales.C9zaC9ZH.min.js" defer></script>
   <script>
     // Usar las utilidades expuestas en window para evitar duplicar identificadores
     document.addEventListener('DOMContentLoaded', async () => {
@@ -206,7 +206,7 @@
       await renderTodo();
     });
   </script>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -216,7 +216,7 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
