--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         function loadUtils() {
           if (!utilsPromise) {
-            utilsPromise = import('/dist/js/bundle-utils-1.min.js');
+            utilsPromise = import('/dist/js/bundle-utils-1.By0Xs4MH.min.js');
           }
           return utilsPromise;
         }
@@ -139,7 +139,7 @@
         openBtn.addEventListener('click', async function(e) {
           e.preventDefault();
           await loadUtils();
-          openSearchModal('/dist/js/search-modal.min.js');
+          openSearchModal('/dist/js/search-modal.D0pWReq9.min.js');
         });
         const safeClose = async (...args) => {
           await loadUtils();
@@ -312,7 +312,7 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/dist/js/bundle-auth-nav.min.js');
+        await import('/dist/js/bundle-auth-nav.CqZGatN4.min.js');
         window.Auth?.initAuth?.();
       } catch (e) {
         console.error('Error loading auth module', e);
@@ -335,7 +335,7 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/dist/js/sw-register.min.js');
+        await import('/dist/js/sw-register.Wot8iBZe.min.js');
       } catch (e) {
         console.error('SW registration failed', e);
       }
