--- a/leg-craft.html
+++ b/leg-craft.html
@@ -156,9 +156,9 @@
   </div>
   </main>
 
-  <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-legendary.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.D43UCTB3.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
@@ -168,9 +168,9 @@
     });
   </script>
   
-  <script type="module" src="/dist/js/tabs.min.js" defer></script>
+  <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   
-  <script type="module" src="/dist/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/dist/js/sw-register.min.js"></script>
+  <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
+  <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
