chore: update item-loader bundle path

--- a/item.html
+++ b/item.html
@@ -138,7 +138,7 @@
     import('/dist/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.5YIslNEH.min.js" defer></script>
+<script type="module" src="/dist/js/item-loader.CPhMCrzV.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
