--- a/versionAntigua/dones.html
+++ b/versionAntigua/dones.html
@@ -106,7 +106,7 @@
 
   <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-legendary.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.B3Au4VNc.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
   <script>
