--- a/versionAntigua/leg-craft.html
+++ b/versionAntigua/leg-craft.html
@@ -149,7 +149,7 @@
 
   <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-legendary.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.B3Au4VNc.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
