--- a/dones.html
+++ b/dones.html
@@ -115,7 +115,8 @@
 
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-legendary.B3Au4VNc.min.js" defer></script>
+  <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
+  <script type="module" src="/dist/js/bundle-legendary.<hash>.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
