--- a/versionAntigua/dones.html
+++ b/versionAntigua/dones.html
@@ -107,7 +107,7 @@
   <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.<hash>.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.B3Au4VNc.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
   <script>
