--- a/versionAntigua/leg-craft.html
+++ b/versionAntigua/leg-craft.html
@@ -150,7 +150,7 @@
   <script type="module" src="/dist/js/bundle-utils-1.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.<hash>.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.B3Au4VNc.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
