--- a/leg-craft.html
+++ b/leg-craft.html
@@ -159,7 +159,7 @@
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.1tKGKPiH.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.DLx6eehQ.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
