--- a/dones.html
+++ b/dones.html
@@ -116,7 +116,7 @@
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.1tKGKPiH.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.CW8pIJXf.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
