chore: rebuild assets and update html references

--- a/fractales-gold.html
+++ b/fractales-gold.html
@@ -173,7 +173,7 @@
   </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-fractales.C9zaC9ZH.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-fractales.Dlz215YN.min.js" defer></script>
   <script>
     // Usar las utilidades expuestas en window para evitar duplicar identificadores
     document.addEventListener('DOMContentLoaded', async () => {
@@ -206,7 +206,7 @@
       await renderTodo();
     });
   </script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
