--- a/dones.html
+++ b/dones.html
@@ -114,11 +114,10 @@
   </div>
 
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-dones.BfigOiiB.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.DIH8x-x6.min.js" defer></script>
-  <script type="module" src="/dist/js/dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.BxYs5ZOp.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
