--- a/end-game.html
+++ b/end-game.html
@@ -93,7 +93,7 @@
       });
     });
   </script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
