--- a/forja-mistica.html
+++ b/forja-mistica.html
@@ -221,8 +221,8 @@
   </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-forja-mistica.B_m8Dj-2.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-forja-mistica.DYW4Pn2J.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
