--- a/dones.html
+++ b/dones.html
@@ -116,7 +116,7 @@
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.BfigOiiB.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.BxYs5ZOp.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.C_iKbyT-.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
