--- a/sellos-y-runas.html
+++ b/sellos-y-runas.html
@@ -39,7 +39,7 @@
      
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
