--- a/compare-craft.html
+++ b/compare-craft.html
@@ -112,7 +112,7 @@
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
   <!-- Nuevos módulos separados -->
-  <script type="module" src="/dist/js/items-core.xSo0rIjF.min.js?v=BsFSl0er" defer></script>
+  <script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
   <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
   <script type="module" src="/dist/js/compare-ui.min.js" defer></script>
 
@@ -143,7 +143,7 @@
 };
 
   </script>
-<script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
+<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
