--- a/item.html
+++ b/item.html
@@ -114,7 +114,7 @@
   });
   </script>
 
-<script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js" defer></script>
+<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
@@ -132,13 +132,13 @@
 <script type="module" src="/dist/js/storageUtils.min.js" defer></script>
 <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
 <script type="module" src="/dist/js/item-ui.min.js" defer></script>
-<script type="module" src="/dist/js/items-core.xSo0rIjF.min.js?v=BsFSl0er" defer></script>
+<script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
 <script type="module">
-  import('/dist/js/services-Cs2ruZo3.js').catch(() =>
+  import('/dist/js/services-Bc-4z6yK.js').catch(() =>
     import('/dist/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.CH7YdHTg.min.js" defer></script>
+<script type="module" src="/dist/js/item-loader.CPhMCrzV.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
