--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
         </p>
         <p style="margin-top:20px;"><a href="/">Volver al inicio</a></p>
     </div>
-    <script type="module" src="/dist/js/bundle-auth-nav.BVkn9sMV.min.js"></script>
+    <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
     <script>
       // Inicializar autenticación cuando el DOM esté listo
       document.addEventListener('DOMContentLoaded', function() {
