chore: update auth nav bundle

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/dist/js/bundle-auth-nav.CqZGatN4.min.js');
+        await import('/dist/js/bundle-auth-nav.DQtwZThZ.min.js');
         window.Auth?.initAuth?.();
       } catch (e) {
         console.error('Error loading auth module', e);
