--- a/leg-craft.html
+++ b/leg-craft.html
@@ -157,7 +157,7 @@
   </main>
 
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
   <script type="module" src="/dist/js/bundle-legendary.btSGyNIl.min.js" defer></script>
   <script>
