--- a/compare-craft.html
+++ b/compare-craft.html
@@ -143,7 +143,7 @@
 };
 
   </script>
-<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+<script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
