--- a/dones.html
+++ b/dones.html
@@ -118,7 +118,7 @@
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
   <script type="module" src="/dist/js/bundle-legendary.btSGyNIl.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
