--- a/janthir-wilds.html
+++ b/janthir-wilds.html
@@ -54,7 +54,7 @@
       </section>
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
