Load hashed utils module before inline code

--- a/fractales-gold.html
+++ b/fractales-gold.html
@@ -172,6 +172,7 @@
     </main>
   </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/utils-PEkmbGsx.js" defer></script>
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-fractales.C9zaC9ZH.min.js" defer></script>
   <script>
