--- a/item.html
+++ b/item.html
@@ -97,6 +97,7 @@
         </div>
       </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/utils-PEkmbGsx.js" defer></script>
   <script>
   document.addEventListener('DOMContentLoaded', function() {
     const openBtn = document.getElementById('open-search-modal');
