--- a/dones.html
+++ b/dones.html
@@ -114,6 +114,7 @@
   </div>
 
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/utils-PEkmbGsx.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
   <script type="module" src="/dist/js/bundle-legendary.btSGyNIl.min.js" defer></script>
