--- a/forja-mistica.html
+++ b/forja-mistica.html
@@ -220,6 +220,7 @@
     </main>
   </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
+  <script type="module" src="/dist/js/utils-PEkmbGsx.js" defer></script>
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-forja-mistica.B_m8Dj-2.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
