--- a/item.html
+++ b/item.html
@@ -133,7 +133,7 @@
 <script type="module" src="/dist/js/storageUtils.min.js" defer></script>
 <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
 <script type="module" src="/dist/js/item-ui.min.js" defer></script>
-<script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
+<script type="module" src="/dist/js/items-core-UEQOvWMv.js" defer></script>
 <script type="module">
   import('/dist/js/services-Bc-4z6yK.js').catch(() =>
     import('/dist/js/services/recipeService.min.js')
