fix item loader script path

--- a/item.html
+++ b/item.html
@@ -139,7 +139,7 @@
     import('/dist/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.CPhMCrzV.min.js" defer></script>
+<script type="module" src="/dist/js/item-loader.CrhdKR7P.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
