--- a/item.html
+++ b/item.html
@@ -133,13 +133,13 @@
 <script type="module" src="/dist/js/storageUtils.min.js" defer></script>
 <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
 <script type="module" src="/dist/js/item-ui.min.js" defer></script>
-<script type="module" src="/dist/js/items-core-UEQOvWMv.js" defer></script>
+<script type="module" src="/dist/js/items-core.o1QUKJ8j.min.js" defer></script>
 <script type="module">
   import('/dist/js/services-Bc-4z6yK.js').catch(() =>
     import('/dist/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.CrhdKR7P.min.js" defer></script>
+<script type="module" src="/dist/js/item-loader.Ct5cfy9q.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
