--- a/compare-craft.html
+++ b/compare-craft.html
@@ -112,7 +112,7 @@
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   <script type="module" src="/dist/js/feedback-modal.BaGBwUid.min.js" defer></script>
   <!-- Nuevos módulos separados -->
-  <script type="module" src="/dist/js/items-core-UEQOvWMv.js" defer></script>
+  <script type="module" src="/dist/js/items-core.o1QUKJ8j.min.js" defer></script>
   <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
   <script type="module" src="/dist/js/compare-ui.min.js" defer></script>
 
