--- a/dones.html
+++ b/dones.html
@@ -117,7 +117,7 @@
   <script type="module" src="/dist/js/utils-PEkmbGsx.js" defer></script>
   <script type="module" src="/dist/js/bundle-dones.B6LmXL3c.min.js" defer></script>
   <!-- Consulta dist/manifest.json para obtener el hash actual; se regenera en cada compilación -->
-  <script type="module" src="/dist/js/bundle-legendary.btSGyNIl.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-legendary.De0xu0PH.min.js" defer></script>
   <script type="module" src="/dist/js/dones.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
   <script>
