--- a/cuenta.html
+++ b/cuenta.html
@@ -100,7 +100,7 @@
   </div>
 
   <!-- Scripts -->
-  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
