--- a/fractales-gold.html
+++ b/fractales-gold.html
@@ -172,7 +172,6 @@
     </main>
   </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/utils-CIX5O90W.js" defer></script>
   <script type="module" src="/dist/js/tabs.DUiiG-cO.min.js" defer></script>
   <script type="module" src="/dist/js/bundle-fractales.C9zaC9ZH.min.js" defer></script>
   <script>
@@ -207,7 +206,7 @@
       await renderTodo();
     });
   </script>
-  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
