--- a/guias.html
+++ b/guias.html
@@ -65,7 +65,7 @@
       </section>
     </main>
   </div>
-  <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js"></script>
+  <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script>
     // Inicializar autenticación cuando el DOM esté listo
     document.addEventListener('DOMContentLoaded', function() {
