--- a/item.html
+++ b/item.html
@@ -97,7 +97,6 @@
         </div>
       </div>
   <script type="module" src="/dist/js/bundle-utils-1.By0Xs4MH.min.js" defer></script>
-  <script type="module" src="/dist/js/utils-CIX5O90W.js" defer></script>
   <script>
   document.addEventListener('DOMContentLoaded', function() {
     const openBtn = document.getElementById('open-search-modal');
@@ -115,7 +114,7 @@
   });
   </script>
 
-<script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js" defer></script>
+<script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js" defer></script>
 <script>
   // Inicializar autenticación cuando el DOM esté listo
   document.addEventListener('DOMContentLoaded', function() {
@@ -133,13 +132,13 @@
 <script type="module" src="/dist/js/storageUtils.min.js" defer></script>
 <script type="module" src="/dist/js/ui-helpers.min.js" defer></script>
 <script type="module" src="/dist/js/item-ui.min.js" defer></script>
-<script type="module" src="/dist/js/items-core.o1QUKJ8j.min.js" defer></script>
+<script type="module" src="/dist/js/items-core.DMXEDbc5.min.js?v=BsFSl0er" defer></script>
 <script type="module">
   import('/dist/js/services-Bc-4z6yK.js').catch(() =>
     import('/dist/js/services/recipeService.min.js')
   );
 </script>
-<script type="module" src="/dist/js/item-loader.Ct5cfy9q.min.js" defer></script>
+<script type="module" src="/dist/js/item-loader.CPhMCrzV.min.js" defer></script>
   
   <!-- Inicialización -->
   <script>
