--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -78,7 +78,7 @@
         <p>Si tienes dudas sobre esta política, puedes contactarnos a través del correo: <a href="mailto:contacto@gw2item.com">contacto@gw2item.com</a></p>
     </div>
 
-    <script type="module" src="/dist/js/bundle-auth-nav.DQtwZThZ.min.js"></script>
+    <script type="module" src="/dist/js/bundle-auth-nav.CqZGatN4.min.js"></script>
   <script type="module" src="/dist/js/sw-register.Wot8iBZe.min.js"></script>
 </body>
 </html>
