feat: centralize asset includes

--- a/dones.html
+++ b/dones.html
@@ -132,11 +132,11 @@
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         await import('/static/current/js/feedback-modal.min.js');
-        await import('/static/current/js/sw-register.min.js');
       } catch (e) {
         console.error('Error loading optional modules', e);
       }
     });
   </script>
+  <!-- partial:assets -->
 </body>
 </html>
