--- a/fractales-gold.html
+++ b/fractales-gold.html
@@ -217,6 +217,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
