--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
   <script type="module">
     window.addEventListener('DOMContentLoaded', async () => {
       try {
-        await import('/static/current/js/sw-register.min.js');
       } catch (e) {
         console.error('SW registration failed', e);
       }
     });
   </script>
+  <!-- partial:assets -->
 </body>
 </html>
