--- a/item.html
+++ b/item.html
@@ -164,5 +164,6 @@
     });
   </script>
     <script type="module" src="/static/current/js/sw.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
