--- a/mundo-viviente-3.html
+++ b/mundo-viviente-3.html
@@ -87,6 +87,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
