--- a/politica-privacidad.html
+++ b/politica-privacidad.html
@@ -79,6 +79,6 @@
     </div>
 
     <script type="module" src="/static/current/js/bundle-auth-nav.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
