--- a/auth.html
+++ b/auth.html
@@ -58,6 +58,6 @@
             }
         };
     </script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
