--- a/compare-craft.html
+++ b/compare-craft.html
@@ -164,6 +164,6 @@
     }
   });
 </script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
