--- a/cuenta.html
+++ b/cuenta.html
@@ -112,6 +112,6 @@
   
   <script type="module" src="/static/current/js/storageUtils.min.js"></script>
   <script type="module" src="/static/current/js/cuenta.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
