--- a/forja-mistica.html
+++ b/forja-mistica.html
@@ -233,6 +233,6 @@
   </script>
 
   <script type="module" src="/static/current/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
