--- a/guias.html
+++ b/guias.html
@@ -76,6 +76,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
