--- a/leg-craft.html
+++ b/leg-craft.html
@@ -172,6 +172,6 @@
   <script type="module" src="/static/current/js/tabs.min.js" defer></script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js" defer></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
