--- a/legendarios.html
+++ b/legendarios.html
@@ -335,6 +335,6 @@ function scrollToLegendario(id) {
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
