--- a/mundo-viviente-4.html
+++ b/mundo-viviente-4.html
@@ -84,6 +84,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
