--- a/secrets-of-the-obscure.html
+++ b/secrets-of-the-obscure.html
@@ -74,6 +74,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
