--- a/sellos-y-runas.html
+++ b/sellos-y-runas.html
@@ -50,6 +50,6 @@
   </script>
   
   <script type="module" src="/static/current/js/feedback-modal.min.js"></script>
-  <script type="module" src="/static/current/js/sw-register.min.js"></script>
+  <!-- partial:assets -->
 </body>
 </html>
