feat: add stable services bundle

--- a/item.html
+++ b/item.html
@@ -133,7 +133,7 @@
   <script type="module" src="/static/current/js/itemHandlers.min.js" defer></script>
   <script type="module" src="/static/current/js/storageUtils.min.js" defer></script>
   <script type="module">
-    import('/static/current/js/services-Bc-4z6yK.js').catch(() =>
+    import('/static/current/js/services.min.js').catch(() =>
       import('/static/current/js/services/recipeService.min.js')
     );
   </script>
